--- a/page.html
+++ b/page.html
@@ -18,6 +18,22 @@
 <!-- Bootstrap JavaScript -->
 <script src="js/bootstrap.min.js"></script>
 <!-- Your JavaScript goes here -->
+<script>
+
+    // prompting for first and last name then concatenating them and displaying in alert.
+
+    let firstName = prompt("What is your first name?")
+    let lastName = prompt("What is your last name?")
+    alert(`Hi ${firstName} ${lastName}`)
+
+    // prompting for number input then parsing the string to add the two variables together. 
+
+    let firstInt = prompt("Please enter a number")
+    let secondInt = prompt("Please enter another number")
+    let mathResult = parseInt(firstInt) + parseInt(secondInt)
+    console.log(mathResult)
+
+</script>
 
 </body>
 </html>
